--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
                     </div>
                     
                     <div class="product-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="product-image-container"><img src="s3.png" alt="اشتراك أوفيس 365 مدى الحياة - تخفيضات صابر" class="product-card-image"></div>
+                        <div class="product-image-container"><img src="s3.png" alt="اشتراك أوفيس 365 لمدة سنه  - تخفيضات صابر" class="product-card-image"></div>
                         <div class="p-5 flex-grow flex flex-col">
-                            <h3 class="text-xl font-bold mb-2">أوفيس 365 (مدى الحياة)</h3>
+                            <h3 class="text-xl font-bold mb-2">أوفيس 365 (لمدة سنه )</h3>
                             <div class="flex items-center justify-between mb-4">
                                 <span class="text-2xl font-bold text-secondary-500">$7.00</span>
                                 <span class="text-gray-400 line-through">$15.00</span>
                             </div>
                             <div class="grid grid-cols-2 gap-3 mt-auto pt-4 border-t border-gray-100">
-                                <button class="btn btn-whatsapp product-order-button" data-product-name="أوفيس 365 (مدى الحياة)" data-product-price="7.00"><i class="fa-brands fa-whatsapp"></i> اطلب</button>
+                                <button class="btn btn-whatsapp product-order-button" data-product-name="أوفيس 365 (لمدة سنه )" data-product-price="7.00"><i class="fa-brands fa-whatsapp"></i> اطلب</button>
                                 <a href="office.html" class="btn btn-secondary">التفاصيل</a>
                             </div>
                         </div>
