--- a/canva-pro.html
+++ b/canva-pro.html
@@ -42,7 +42,7 @@
         "mainEntity": [
             { "@type": "Question", "name": "هل التفعيل على إيميلي الخاص؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، التفعيل يتم على حسابك الشخصي في Canva. سنقوم بإرسال دعوة انضمام إلى فريق عبر البريد الإلكتروني، وبمجرد قبول الدعوة، تتم ترقية حسابك إلى Canva Pro." } },
             { "@type": "Question", "name": "كم مدة الاشتراك؟ وهل هو مضمون؟", "acceptedAnswer": { "@type": "Answer", "text": "الاشتراك لمدة سنة كاملة (365 يومًا) من تاريخ التفعيل. نحن نضمن استمرارية الاشتراك طوال هذه الفترة. في حال حدوث أي مشكلة، نتكفل بحلها أو استبدال الاشتراك." } },
-            { "@type": "Question", "name": "هل سأحصل على جميع ميزات Canva Pro؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، ستحصل على جميع ميزات Canva Pro، بما في ذلك ملايين الصور والقوالب الاحترافية، ومزيل الخلفية، وتغيير حجم التصاميم، وأدوات الذكاء الاصطناعي، ومجموعة العلامة التجارية (Brand Kit)." } }
+            { "@type": "Question", "name": "هل سأحصل على جميع ميزات Canva Pro؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، ستحصل على جميع ميزات Canva Pro، بما في ذلك ملايين الصور والقوالب الاحترافية، ومزيل الخلفية، وتغيير حجم التصاميم، " } }
         ]
     }
     </script>
@@ -251,7 +251,7 @@
                         </details>
                          <details class="group bg-gray-50 p-4 rounded-lg border border-gray-200 transition hover:border-primary-500">
                             <summary class="flex justify-between items-center cursor-pointer font-bold text-lg text-text-dark"><span>هل سأحصل على جميع ميزات Canva Pro؟</span><i class="fa-solid fa-chevron-down group-open:rotate-180 transition-transform"></i></summary>
-                            <p class="mt-3 text-text-light leading-relaxed">نعم، ستحصل على جميع ميزات Canva Pro، بما في ذلك ملايين الصور والقوالب الاحترافية، ومزيل الخلفية، وتغيير حجم التصاميم، وأدوات الذكاء الاصطناعي، ومجموعة العلامة التجارية (Brand Kit).</p>
+                            <p class="mt-3 text-text-light leading-relaxed">نعم، ستحصل على جميع ميزات Canva Pro، بما في ذلك ملايين الصور والقوالب الاحترافية، ومزيل الخلفية، وتغيير حجم التصاميم،  ،).</p>
                         </details>
                     </div>
                 </div>
