--- a/gemini.html
+++ b/gemini.html
@@ -42,7 +42,7 @@
         "mainEntity": [
             { "@type": "Question", "name": "هل هذا الاشتراك على إيميلي الخاص (حساب جوجل)؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، يتم تفعيل الاشتراك مباشرة على حساب جوجل الخاص بك (Gmail). أنت المالك الوحيد للاشتراك وتستفيد من كامل الميزات على حسابك." } },
             { "@type": "Question", "name": "كم من الوقت يستغرق التفعيل بعد الدفع؟", "acceptedAnswer": { "@type": "Answer", "text": "التفعيل فوري ويتم خلال دقائق معدودة بعد تأكيد عملية الدفع. سيتم إرشادك حول خطوات التفعيل لضمان حصولك على الخدمة بسرعة وسهولة." } },
-            { "@type": "Question", "name": "هل المساحه كبيره؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، من أهم ميزات Google One هي إمكانية مشاركة مساحة التخزين السحابية البالغة 2 تيرابايت والمزايا " } },
+            { "@type": "Question", "name": "هل المساحه كبيره؟", "acceptedAnswer": { "@type": "Answer", "text": "نعم، من أهم ميزات Google One  التخزين السحابية البالغة 2 تيرابايت  " } },
             { "@type": "Question", "name": "ما هي أبرز استخدامات Gemini Advanced؟", "acceptedAnswer": { "@type": "Answer", "text": "Gemini Advanced يساعدك في المهام المعقدة مثل البرمجة، التحليل المنطقي، التعاون في المشاريع الإبداعية، فهم المواضيع المعقدة بعمق، والمزيد. إنه مساعدك الذكي للإنتاجية والإبداع." } }
         ]
     }
@@ -152,8 +152,8 @@
                         <div>
                             <h3 class="font-bold text-lg mb-2 text-secondary-500 flex items-center gap-2"><i class="fa-solid fa-cloud"></i> فوائد Google One (2TB):</h3>
                             <ul class="space-y-2 list-disc pl-5">
-                                <li>مساحة تخزين 2 تيرابايت عبر Gmail, Drive, Photos.</li>
-                                <li>مشاركة المساحة مع ما يصل إلى 5 أفراد.</li>
+                                <li>مساحة تخزين 2 تيرابايت  Gmail, Drive, Photos.</li>
+                                <li> المساحة  .</li>
                                 <li>نسخ احتياطي تلقائي لبيانات الهاتف.</li>
                                 <li>ميزات تحرير إضافية في صور جوجل وVPN.</li>
                             </ul>
@@ -261,7 +261,7 @@
                         </details>
                          <details class="group bg-gray-50 p-4 rounded-lg border border-gray-200 transition hover:border-primary-500">
                             <summary class="flex justify-between items-center cursor-pointer font-bold text-lg text-text-dark"><span>كم المساحه والمميزات</span><i class="fa-solid fa-chevron-down group-open:rotate-180 transition-transform"></i></summary>
-                            <p class="mt-3 text-text-light leading-relaxed">نعم، من أهم ميزات Google One هي إمكانية مشاركة مساحة التخزين السحابية البالغة 2 تيرابايت </p>
+                            <p class="mt-3 text-text-light leading-relaxed">نعم، من أهم ميزات Google One هي   مساحة التخزين السحابية البالغة 2 تيرابايت </p>
                         </details>
                          <details class="group bg-gray-50 p-4 rounded-lg border border-gray-200 transition hover:border-primary-500">
                             <summary class="flex justify-between items-center cursor-pointer font-bold text-lg text-text-dark"><span>ما هي أبرز استخدامات Gemini Advanced؟</span><i class="fa-solid fa-chevron-down group-open:rotate-180 transition-transform"></i></summary>
